# log_aggregator

./: .env  .gitignore  .mutmut-cache  Dockerfile  LICENSE  Makefile  README.md  config.py  convert.py  db.py  extract.py  helper.py  local_checks.sh  log-aggregator.py  log_aggregator-compose.yml  logs.py  main.py  model.py  prod.env  pyproject.toml  pytest.ini  setup.cfg  stack.yaml  test.env  vars.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
aggregator/: __init__.py  config.py  convert.py  db.py  extract.py  helper.py  logs.py  main.py  model.py  view.py
tests/: __init__.py  conftest.py  context.py  test_aggregator.py  test_config.py  test_convert.py  test_db.py  test_extract.py  test_helper.py  test_main.py  test_model.py  test_view.py
testsource/: .gitignore
testsource/zips/: .gitignore
