[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: unit tests",
    "mock: mock tests",
]
[tool.poetry]
name = "log-aggregator"
version = "0.1.0"
description = ""
authors = ["JL"]

[tool.poetry.dependencies]
python = "^3.10"
beanie = "^1.11.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
bandit = "^1.7.4"
beanie = "^1.11.6"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pip-chill = "^1.0.1"
pytest-asyncio = "^0.19.0"
pytest-bdd = "^6.0.1"
pytest-coverage = "^0.0"
pytest-mccabe = "^2.0"
pytest = "^7.1.2"
mutmut = "^2.4.1"
poetry = "^1.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
